# rog

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  rog.toml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  settings.rs
test/: Application_20190503.csv  System_20190503.csv
tool/linux/: gonkf
tool/macos/: gonkf
