[package]
name = "rog"
version = "0.1.0"
authors = ["yukimemi <yukimemi@gmail.com>"]
description = "rog is log filter and merge tool"
edition = "2018"

[dependencies]
failure = "0.1.5"
pretty_env_logger = "0.3.0"
log = "0.4.6"
clap = "2.33.0"
config = "0.9.2"
serde_derive = "1.0.90"
serde = "1.0.90"
